--- a/Web.config
+++ b/Web.config
@@ -17,7 +17,7 @@
     <add key="Port" value="587"/>
   </appSettings>
   <connectionStrings>
-    <add name="MyConnection" connectionString="Data Source=S445\SQLEXPRESS;Initial Catalog=Mag;Integrated Security=True"
+    <add name="MyConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=E:\git\InternetShop\App_Data\Database1.mdf;Integrated Security=True;User Instance=True"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
     <system.web>
