--- a/Web.config
+++ b/Web.config
@@ -5,7 +5,7 @@
     <add key="AdminLoginID" value="admin"/>
     <add key="AdminPassword" value="admin"/>
 
-    <add key="NameOfShop" value="Klondayk"/> 
+    <add key="NameOfShop" value="Klondayk"/>
     <add key="Description" value="The best shop ever"/>
     <add key="Telefon" value="+000-000-00-00"/>
     <add key="Kontakty" value="Kiev, Respublikanskiy Stadion 1"/>
@@ -17,11 +17,10 @@
     <add key="Port" value="587"/>
   </appSettings>
   <connectionStrings>
-    <add name="MyConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=E:\git\InternetShop\App_Data\Database1.mdf;Integrated Security=True;User Instance=True"
+    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True;User Instance=True"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
-    <system.web>
-        <compilation debug="true"  />
-    </system.web>
-
+  <system.web>
+    <compilation debug="true"  />
+  </system.web>
 </configuration>
